# teleop_twist_twitch

./: .gitignore  LICENSE.md  README.md  chat_test.py
tp-teleop_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
tp-teleop_ws/devel/lib/pkgconfig/: rover_description.pc  rover_gazebo.pc  rover_simulation.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  teleop_twist_twitch.pc  turtlebot_bringup.pc  turtlebot_capabilities.pc  turtlebot_gazebo.pc  turtlebot_stage.pc  turtlebot_stdr.pc
tp-teleop_ws/devel/share/rover_description/cmake/: rover_descriptionConfig.cmake
tp-teleop_ws/devel/share/rover_gazebo/cmake/: rover_gazeboConfig.cmake
tp-teleop_ws/devel/share/rover_simulation/cmake/: rover_simulationConfig.cmake
tp-teleop_ws/devel/share/rrbot_control/cmake/: rrbot_controlConfig.cmake
tp-teleop_ws/devel/share/rrbot_description/cmake/: rrbot_descriptionConfig.cmake
tp-teleop_ws/devel/share/rrbot_gazebo/cmake/: rrbot_gazeboConfig.cmake
tp-teleop_ws/devel/share/teleop_twist_twitch/cmake/: teleop_twist_twitchConfig.cmake
tp-teleop_ws/devel/share/turtlebot_bringup/cmake/: turtlebot_bringupConfig.cmake
tp-teleop_ws/src/rover_description/: CMakeLists.txt
tp-teleop_ws/src/rover_description/launch/: rover_rviz.launch
tp-teleop_ws/src/rover_description/urdf/: rover.gazebo  rover.xacro
tp-teleop_ws/src/rover_gazebo/: CMakeLists.txt
tp-teleop_ws/src/rover_gazebo/launch/: rover_world.launch
tp-teleop_ws/src/teleop-twist-twitch/: CMakeLists.txt  package.xml  teleop_twist_twitch.py
(+4 files in other folders)
